2009-08-04  Thomas Heller  <theller@python.net>

	* Added comtypes.CoGetClassObject() low-level function,
	comtypes.client.GetClassObject() high-level function, and
	implemented a pythonic interface to IClassFactory's CreateInstance
	method:

	    def CreateInstance(self,
			       punkouter=None,
			       interface=None,
			       dynamic=False)

	* Added the 'dynamic=False' parameter to the
	comtypes.client.CoGetObject and comtypes.client.GetActiveObject
	functions.  Suggested by James Teh.

2009-06-17  Thomas Heller  <theller@python.net>

	* comtypes.automation: Support VT_I8 and VT_UI8 SAFEARRAYs.

	* comtypes._comobject: Restore compatibility with Python 2.3.

	* Add the comtypes.IServiceProvider interface.  Based on a patch
	from Michael Curran.

2009-04-30  Thomas Heller  <theller@python.net>

	* Change version number in repository to 0.6.0.2dev.

	* Replace the VARIANTEnumerator implementation class in
	comtypes.server.automation with a new one which should actually be
	usable.

	* A completely new way how localserver and inproc server instances
	are managed:

		A comtypes.LocalServer or comtypes.InprocServer instance
		is attached to the comtypes.COMObject class at runtime.

		These changes keep localserver running as long as
		COMObject instances are alive.

2009-04-29  Thomas Heller  <theller@python.net>

	* comtypes.errorinfo.ReportException now takes an additional
	'stacklevel' named argument.

	* Add E_OUTOFMEMORY hresult code.

	* Register the InprocServer32 only when running as script or
	py2exe dll, not when running as py2exe exe server.
	
2009-04-25  Thomas Heller  <theller@python.net>

	* SAFEARRAYs can now also be created from multi-dimensional numpy
	arrays.

2009-04-23  Thomas Heller  <theller@python.net>

	* Change version number in repository to 0.6.0.1dev.

	* SAFEARRAYs can now also be created from array.array objects, and
	from (one-dimensional) numpy arrays.  This is a lot faster than